filetype
added filetype function to check for existance of filetype in the current dir